# gptoss-tools

./: CLAUDE.md  EDIT2.MD  EDIT3.MD  README.md  chat_panel.py  config.yaml  file_read_interactive.py  file_read_tool.py  filewrite  glop  gpt_oss_tui.py  gpt_oss_tui.py_bak  gptoss  gptoss_launch.sh  gptoss_rich.py  gptoss_tmux.sh  gptoss_tools.py  gptoss_tools_old.py  gptoss_tui.py  grep  pyproject.toml  quick.py  read  readymyfiles  requirements copy.txt  requirements.txt  search  setup.sh  setup_terminal.sh  teet.txt  test_tools.py  thinking.md  tmux_manager.py
.gptoss-index/: search_index.db
archive/: EDIT1.MD  EDIT4.md  EDIT5.md  SESSION_STATUS.md  TUI_README.md  custom_theme.py  launch_tui.py  main.py  simple_tui.py  thinking_panel_backup_20250807_053439.py  yoga_demo.py
archive/demo-project/: advanced.py  math_utils.py
demo-project/: hello.py
demo-project/.gptoss-index/: search_index.db
demo-project/prepared-files/: bundle_001.json
